<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateTargetDonationActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/button_background"
        android:fontFamily="@font/roboto"
        android:text="@string/action_next"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimary"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="12dp"
            android:paddingRight="12dp">

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="26dp"
                android:scaleType="fitXY"
                app:srcCompat="@drawable/placeholder_cover" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_donation_name"
                android:textColor="@color/colorTextColor" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:background="@drawable/control_background"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_donation_name"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:paddingLeft="12dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_donation_amount"
                android:textColor="@color/colorTextColor" />

            <EditText
                android:id="@+id/editTextTextPersonName2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:background="@drawable/control_background"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_donation_amount"
                android:inputType="numberDecimal"
                android:padding="12dp"
                android:paddingLeft="12dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_donation_purpose"
                android:textColor="@color/colorTextColor" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:background="@drawable/control_background"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:hint="@string/hint_donation_purpose"
                android:inputType="textPersonName"
                android:padding="12dp"
                android:paddingLeft="12dp"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_donation_description"
                android:textColor="@color/colorTextColor" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="26dp"
                android:background="@drawable/control_background"
                android:ems="10"
                android:fontFamily="@font/roboto"
                android:gravity="clip_horizontal"
                android:hint="@string/hint_donation_description"
                android:inputType="textMultiLine"
                android:lines="2"
                android:minLines="2"
                android:padding="12dp"
                android:singleLine="false"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorGray"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:text="@string/text_donation_receiver"
                android:textColor="@color/colorTextColor" />

            <Spinner
                android:id="@+id/spinner"
                android:layout_width="match_parent"
                android:layout_height="44dp"
                android:background="@drawable/spinner_background"
                android:padding="12dp" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>