<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="12dp"
    tools:context=".DonationTypeActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintTypeTarget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_background"
            android:onClick="createTargetDonation">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_target_description"
                android:textAlignment="textStart"
                android:textColor="@color/colorGray"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonMainCreateDonation"
                app:layout_constraintEnd_toStartOf="@+id/imageViewCreateTargetType"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_target" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/title_target"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toStartOf="@+id/imageViewCreateTargetType"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewCreateTargetType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="19dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_arrow_right"
                android:onClick="createTargetDonation"/>
        </androidx.constraintlayout.widget.ConstraintLayout>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintTypeRegular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:background="@drawable/selector_background"
            android:onClick="createRegularDonation">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="2dp"
                android:layout_marginEnd="14dp"
                android:layout_marginBottom="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/text_regular_description"
                android:textAlignment="textStart"
                android:textColor="@color/colorGray"
                android:textSize="13sp"
                app:layout_constraintBottom_toTopOf="@+id/buttonMainCreateDonation"
                app:layout_constraintEnd_toStartOf="@+id/imageViewCreateRegularType"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="24dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_regular" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="14dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="14dp"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/title_regular"
                android:textColor="@color/colorBlack"
                app:layout_constraintEnd_toStartOf="@+id/imageViewCreateRegularType"
                app:layout_constraintStart_toEndOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageViewCreateRegularType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="19dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icon_arrow_right"
                android:onClick="createRegularDonation"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>